# CV_app

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
requirements/: requirements-dev.txt  requirements.txt
src/: interface.py  main.py  model.py  settings.py
src/database/: __init__.py  model_class.py  picture.py  point.py  prediction.py  session_manager.py
src/database/migrations/: env.py
src/database/migrations/versions/: 2023-10-20_49413255d8ff_init.py  2023-10-20_de8592fff4d9_init.py  2023-10-20_fcb4c21d04bb_init.py
src/repository/: model_classes.py  model_prediction.py  picture.py  point.py
