[tool.poetry]
name = "cv-app"
version = "0.1.0"
description = ""
authors = ["Roman Solomatin <36135455+Samoed@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^3.50.2"
sqlalchemy = "^2.0.22"
psycopg2-binary = "^2.9.9"
ultralytics = "^8.0.200"
alembic = "^1.12.0"
pydantic-settings = "^2.0.3"
sqlalchemy-utils = "^0.41.1"
onnxruntime = "^1.16.1"
onnx = "^1.14.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pyupgrade = "^3.15.0"
types-pillow = "^10.1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.isort]
profile = "black"
combine_as_imports = true
skip_gitignore = true
py_version = 310

# https://github.com/tiangolo/sqlmodel/blob/main/pyproject.toml
[tool.mypy]
python_version = "3.10"
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
plugins = [
    "pydantic.mypy",
]
ignore_missing_imports = false
# --strict end
exclude = [
    "tests/"
]

[[tool.mypy.overrides]]
module = [
    "ultralytics",
    "sqlalchemy_utils",
]
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py310']
preview = true
exclude = '''
/(
    .git
  | .venv
  | notebooks
)/
'''
